@@ -246,6 +246,7 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 - Making the http/json metricset GA. {pull}6471[6471]
 - Add support for array in http/json metricset. {pull}6480[6480]
 - Making the jolokia/jmx module GA. {pull}6143[6143]
+- Making the MongoDB module GA. {pull}6554[6554]
 
 *Packetbeat*
 
